fix(navigator): ✨ add sorting mode and implement auto slot recalculation - fixes slots in warp group